--- a/mern-client/package.json
+++ b/mern-client/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "chart.js": "^4.4.3",
     "classnames": "^2.5.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.12.3",
     "flowbite": "^2.4.1",
